# PictuRAS

./: README.md
api_gateway/linux/: nginx.conf
api_gateway/remote/: nginx.conf
api_gateway/wsl/: Dockerfile  nginx.conf
deployment/linux/: docker-compose.yml
deployment/remote/: docker-compose.yml
deployment/wsl/: docker-compose.yml
frontend/: .gitignore  Dockerfile  bun.lockb  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/lib/: api.ts  (+1 more)
frontend/src/assets/: index.css
frontend/src/router/: index.ts
frontend/src/stores/: session.ts
frontend/src/types/: api.ts
frontend/src/views/: EditProjectView.vue  LoginView.vue  MainPageView.vue  RegisterView.vue
projects/: .env.sample  .gitignore  Dockerfile  README.md  mix.exs
projects/bruno/: bruno.json
projects/bruno/images/: Delete image.bru  Download image.bru  Upload image(s).bru
projects/bruno/projects/: Create project.bru  Delete project.bru  Get project.bru  List user projects.bru  Process project.bru  Update project.bru
projects/bruno/share/: Invite User.bru  Revoke User.bru
projects/bruno/tools/: List available tools.bru
projects/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
projects/data/: tools.json
projects/lib/: projects.ex  projects_web.ex
projects/lib/projects/: accounts.ex  application.ex  mailer.ex  projects.ex  release.ex  repo.ex
projects/lib/projects_web/: endpoint.ex  router.ex  telemetry.ex
projects/test/projects/: projects_test.exs
tools/picturas-bg-removal-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-bg-removal-tool-ms/picturas_bg_removal_tool_ms/: bg_removal_request_message.py  bg_removal_result_message.py  bg_removal_tool.py  config.py  main.py
tools/picturas-blur-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-blur-tool-ms/picturas_blur_tool_ms/: blur_request_message.py  blur_result_message.py  blur_tool.py  config.py  main.py
tools/picturas-border-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-border-tool-ms/picturas_border_tool_ms/: border_request_message.py  border_result_message.py  border_tool.py  config.py  main.py
tools/picturas-brightness-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-brightness-tool-ms/picturas_brightness_tool_ms/: brightness_request_message.py  brightness_result_message.py  brightness_tool.py  config.py  main.py
tools/picturas-contrast-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-contrast-tool-ms/picturas_contrast_tool_ms/: config.py  contrast_request_message.py  contrast_result_message.py  contrast_tool.py  main.py
tools/picturas-crop-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-crop-tool-ms/picturas_crop_tool_ms/: config.py  crop_request_message.py  crop_result_message.py  crop_tool.py  main.py
tools/picturas-hue-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-hue-tool-ms/picturas_hue_tool_ms/: config.py  hue_request_message.py  hue_result_message.py  hue_tool.py  main.py
tools/picturas-invert-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-invert-tool-ms/picturas_invert_tool_ms/: config.py  invert_request_message.py  invert_result_message.py  invert_tool.py  main.py
tools/picturas-object-detection-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-object-detection-tool-ms/picturas_object_detection_tool_ms/: config.py  main.py  object_detection_request_message.py  object_detection_result_message.py  object_detection_tool.py
tools/picturas-resize-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-resize-tool-ms/picturas_resize_tool_ms/: config.py  main.py  resize_request_message.py  resize_result_message.py  resize_tool.py
tools/picturas-rotate-tool-ms/: Dockerfile  pyproject.toml
tools/picturas-rotate-tool-ms/picturas_rotate_tool_ms/: config.py  main.py  rotate_request_message.py  rotate_result_message.py  rotate_tool.py
tools/picturas-saturation-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-saturation-tool-ms/picturas_saturation_tool_ms/: config.py  main.py  saturation_request_message.py  saturation_result_message.py  saturation_tool.py
tools/picturas-sharpen-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-sharpen-tool-ms/picturas_sharpen_tool_ms/: config.py  main.py  sharpen_request_message.py  sharpen_result_message.py  sharpen_tool.py
tools/picturas-text-extraction-tool-ms/: .env.example  Dockerfile  pyproject.toml
tools/picturas-text-extraction-tool-ms/picturas_text_extraction_tool_ms/: config.py  main.py  text_extraction_request_message.py  text_extraction_result_message.py  text_extraction_tool.py
users/: .env.sample  .gitignore  Dockerfile  README.md  mix.exs
users/bruno/: Get current user.bru  Login user.bru  Register user.bru  Update current user.bru  bruno.json
users/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
users/lib/: users.ex
users/lib/users/: accounts.ex  application.ex  mailer.ex  release.ex  repo.ex
users/lib/users_web/: endpoint.ex  router.ex  telemetry.ex
users/test/users/: accounts_test.exs
(+105 files in other folders)
