[tool.poetry]
name = "picturas-resize-tool-ms"
version = "0.1.0"
description = "PictuRAS microservice (tool) that resizes an input image, generating a new output image with the specified scaling factor."
authors = ["Rafael Gomes <pg56000@alunos.uminho.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pika = "^1.3.2"
pydantic = "^2.10.3"
opencv-python = "^4.8.0.74"

[tool.poetry.group.dev]
dependencies = { yapf = "^0.43.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
